--- a/dahoueb/src/DL2015/IndexBundle/Resources/views/aside2.html.twig
+++ b/dahoueb/src/DL2015/IndexBundle/Resources/views/aside2.html.twig
@@ -9,7 +9,7 @@
         <div id="bandeauInt">Connection</div>
 
         <p>Bonjour {{ app.session.get('user') }}</p>
-        <p><a href="{{ path ('dl2015_logout')}}" >Se Déconnecter </a></p>
+        <p><a href="{{ path ('dl2015_logout')}}"  ><input type="button" value="Logout"> </a> </a></p>
 
     </div>
     <div id="infChall">
