--- a/dahoueb/src/DL2015/IndexBundle/Resources/views/aside.html.twig
+++ b/dahoueb/src/DL2015/IndexBundle/Resources/views/aside.html.twig
@@ -15,8 +15,8 @@
 
     </div>
     <div id="infChall">
-        <div id="bandeauInt">Challenge</div>
-
+        <div id="bandeauInt">Challenge en cours</div>
+        <div id ="currentChal">Challenge {{libel}}</div>
     </div>
     <div id="recherche">
         <div id="bandeauInt">Recherche</div>
