--- a/dahoueb/app/Resources/views/layoutBase.html.twig
+++ b/dahoueb/app/Resources/views/layoutBase.html.twig
@@ -17,7 +17,7 @@
                 </li>
                 <li><a href="#"><span class="chevron bottom"></span>Challenges et régates</a>
                     <ul>
-                    <li><a href="{{ path('dl2015_register')}}">Inscription</a></li>
+                    <li><a href="{{ path('dl2015_regate')}}">Inscription</a></li>
                     <li><a href="#">Résultats</a></li>
                     <li><a href="#">Archives</a></li>
                     </ul>
