--- a/dahoueb/src/DL2015/IndexBundle/Resources/views/voilier.html.twig
+++ b/dahoueb/src/DL2015/IndexBundle/Resources/views/voilier.html.twig
@@ -2,10 +2,10 @@
 
 
 {% block content %}
-    Challenge :{{ libelchal }}
-    Regate sélectionnée {{ libelreg }}
+    Challenge : {{ libelchal }}</br>
+    Regate sélectionnée : {{ libelreg }}</br>
     <a href ="{{ path ('dl2015_regate') }}">Retour au choix précédent</a>
-    {#{{ form(form) }}#}
+    {{ form(form) }}
     
     
 
